# InfraPy

./: LICENSE  LICENSE.txt  License  README.md  README.rst  Showcase_TSA.ipynb  pyproject.toml  requirements.txt  setup.py
examples/: Showcase_thermoelasticity.ipynb  Weighted Thermoelastic Identification.ipynb  basic_example.py  example_emissivity.py  example_thermoelasticity.py
gui/: app.py
infrapy/: Functions_WTI.py  WTI.ipynb  __init__.py  __main__.py  emissivity.py  io.py  thermoelasticity.py  thermography.py  utils.py  visualization.py  wti.py
infrapy/GUIs/: analysis.py  crop.py  gui.py  gui_dev.py  gui_v2.py  style.py  widgets.py
infrapy/io/: readers.py  writers.py
tests/: test_basic.py
