[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "InfraPy"
version = "0.1.0"
authors = [{name = "Lorenzo Capponi et al.", email = "lorenzocapponi@outlook.it"}]
maintainers = [{name = "Lorenzo Capponi et al.", email = "lorenzocapponi@outlook.it"}]
license = "MIT"
description = "Infared Image Processing"
readme = "README.rst"
keywords = ["sdypy", "template"]
requires-python = ">=3.10"

# Dependency management (these must be installed for the package to work)
dependencies = [
    "numpy>=1.11.0",
    "scipy>=1.2.0",
    "matplotlib>=3.0.0"
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
]

# Optional dependencies (can be installed with `pip install infrapy[dev]`).
# Can add as many as you want, but they must be listed in the `optional-dependencies` section.
[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "pytest",
    "build",
    "sphinx-rtd-theme",
    "sphinx-copybutton>=0.5.2",
]

[project.urls]
homepage = "https://github.com/lollocappo/infrapy"
documentation = "https://github.com/lollocappo/infrapy"
source = "https://github.com/sdypy/sdypy_template_project"

# Define the files that are included in the wheel
[tool.hatch.build.targets.wheel]
include = ["infrapy/*"]

# Define the files that are included in the source distribution (tar.gz)
[tool.hatch.build.targets.sdist]
include = [
    "infrapy/*"
]